--- a/doc/egbib.bib
+++ b/doc/egbib.bib
@@ -28,3 +28,13 @@
   year={2004},
   publisher={Springer}
 }
+
+@article{mikolajczyk2004scale,
+  title={Scale \& affine invariant interest point detectors},
+  author={Mikolajczyk, Krystian and Schmid, Cordelia},
+  journal={International journal of computer vision},
+  volume={60},
+  pages={63--86},
+  year={2004},
+  publisher={Springer}
+}
