--- a/doc/notation.tex
+++ b/doc/notation.tex
@@ -1,6 +1,7 @@
 \newcommand\figref[1]{\textbf{图}~\ref{#1}}
 \newcommand\thmref[1]{\textbf{定理}~\ref{#1}}
 \newcommand\equref[1]{\textbf{式}~(\ref{#1})~}
+\newcommand\secref[1]{\textbf{第}~\ref{#1}~\textbf{节}}
 
 \renewcommand{\figurename}{图}
 
@@ -31,7 +32,7 @@
 
 % \newacronym{⟨label⟩}{⟨abbrv⟩}{⟨full⟩}
 \newacronym[longplural={尺度不变特征变换（Scale-Invariant Feature Transform, SIFT）}]%
-           {sift}{SIFT}{尺度不变特征变换（Scale-Invariant Feature Transform, SIFT）}
+{sift}{SIFT}{尺度不变特征变换（Scale-Invariant Feature Transform, SIFT）}
 \newcommand{\sift}{\gls*{sift}}
 
 \newacronym{scale}{尺度不变性}{尺度不变性（scale invariance）}
