--- a/doc/src/Matching descriptors.tex
+++ b/doc/src/Matching descriptors.tex
@@ -1,1 +1,11 @@
-\part{Matching Descriptors}\label{part:Matching descriptors}
+\part{Using SIFT for Image Matching}\label{part:Matching descriptors}
+
+基于前面提取\sift 特征点、描述\sift 特征点的过程，本部分进一步介绍如何进行多视角图像间特征点的匹配，并展示一个最终的实验结果。
+
+\section{描述子匹配}
+
+寻找一幅图像中某个特征点在另一幅图像中的对应，即寻找与之描述子最为接近的特征点。衡量两个描述子（即特征向量）之间距离的方式有很多，例如欧氏距离（2-范数），汉明距离等。这里，我直接使用欧氏距离，并且以暴力匹配的方式寻找描述子之间的匹配关系。
+
+同时，不一定一幅图像中的每一个描述子都能在另一幅图像中找到对应点，因此可以对描述子之间的距离设置一个上限；并且可以每次选取距离最近的两个描述子，如果最接近的描述子距离上要明显小于次接近的描述子，则可认为最接近的描述子是可靠的。
+
+\section{实验效果：图像特征匹配}
