--- a/doc/technical-report.tex
+++ b/doc/technical-report.tex
@@ -69,7 +69,7 @@ subfigure
 \input{src/Keypoint detection.tex}
 \input{src/SIFT descriptor.tex}
 \input{src/Matching descriptors.tex}
-\input{src/Experiment.tex}
+% \input{src/Experiment.tex}
 
 % --------------------->>参考文献<<-----------------------
 \bibliography{egbib}
