--- a/doc/src/Keypoint detection.tex
+++ b/doc/src/Keypoint detection.tex
@@ -2,9 +2,9 @@
 
 正如上一章所讲，因为我们希望提取到的局部特征具有尺度不变性，所以既要找局部特征所在位置，还要确定它们的尺度。\lpl 已经被说明能够很好地完成上述任务，但它还不是最优的。本章将介绍\sift 是如何优化的，以及程序在实现关键点检测时的一些细节。
 
-\section{构造高斯金字塔}
+\section{构造高斯差分金字塔}
 
-\sift 注意到一个明显的问题是当\lpl 尺度越来越大$\sigma$时，卷积窗口$w$也会越来越大（一般认为$w\approx 6\sigma$），计算消耗也会越来越明显。为了解决这一问题，\sift 指出可以采用\DoG 完成如下近似：
+\sift 注意到一个明显的问题是当\lpl 尺度越来越大$\sigma$时，卷积窗口$w$也会越来越大（一般认为$w\approx 2\times\lceil 3\sigma\rceil + 1$），计算消耗也会越来越明显。为了解决这一问题，\sift 指出可以采用\DoG 完成如下近似：
 \begin{equation}
 	\eqnmarkbox[emph2]{dog}{G(x,y,k\sigma) - G(x,y,\sigma)} \approx (k-1)\eqnmarkbox[emph2]{log}{\sigma^2\nabla^2 G}
 \end{equation}
@@ -52,5 +52,21 @@
 	\item 加载图像；
 	\item 对于索引$s=[0, 1, \ldots, S+2]$，用标准差$k^s\sigma_0$对图像进行高斯模糊。这里可以采用\equref{equ: gaussian convolution}介绍的方法提高效率，每一层直接在上一层的基础上进行模糊；
 	\item 相邻的两张高斯模糊图像做差得到\DoG，每三层\DoG 就可以叠放成\figref{fig:Scale-space blob detector}所示的3D张量；
-	\item 重复2-3步以最终得到$O$个\octave 。每一个\octave 的底层高斯模糊图像可以直接从上一\octave 的第$S$层经两倍下采样获得。
+	\item 重复2-3步以最终得到$O$个\octave 。后面每个\octave 的最底层高斯模糊图像可以直接从上一\octave 的第$S$层经两倍下采样获得。
 \end{enumerate}
+
+\section{定位关键点}
+
+在上一章\secref{sec:图像尺度空间}中提到，\emph{关键点}即在\DoG 尺度空间比它的领域都要大的极值点。搜索关键点的过程同时也需要进行非极大值抑制，因为图像中的相邻像素在\DoG 中的响应很可能相同，这会对后续特征点匹配的稳定性造成影响。同时还可以设置阈值，去除对比度低的点，因为这些点可能来自噪声。下面是程序中搜索定位关键点的步骤：
+\begin{enumerate}
+	\item 抑制所有响应小于阈值$C$的点；
+	\item 将每个\octave 中的$S+2$个\DoG 叠成一个$H\times W\times (S+2)$的张量，比较张量中每一个位置和它$26(8+9+9)$个邻域之间的大小关系。如果一个位置比它邻域都要大，则它是一个关键点。忽略\DoG 金字塔最底层和最高层中检测到的关键点，即只在张量的$[\cdot, \cdot, 1]\sim [\cdot, \cdot, S]$部分提取关键点。
+	\item 对每个\octave 重复上述过程。
+\end{enumerate}
+
+
+
+% 改进：
+% （1）关键点的精确定位
+% （2）实现对视角的鲁棒性\cite{mikolajczyk2004scale}
+% （3）去除边缘上的点。
