--- a/doc/src/SIFT descriptor.tex
+++ b/doc/src/SIFT descriptor.tex
@@ -9,10 +9,11 @@
 在\sift 算法中，\emph{主方向}被定义为是指关键点周围像素的梯度方向直方图中的最大峰值所对应的方向。在找到这个主方向之后，通过对关键点周围的图像区域进行旋转的方式，将该主方向变换到统一的标准方向。该过程的具体步骤如下：
 \begin{enumerate}
     \item 计算梯度幅值和方向：首先，以每个\sift 特征关键点为中心提取出$16\times 16$的局部图像块，然后计算其中每个像素的梯度幅值和方向。这可以通过对图像进行梯度运算来实现。通常使用Sobel算子或\lpl 算子来计算图像的梯度。对于像素点$(x,y)$，其梯度的幅值和方向分别为：
-    \begin{align*}
+    \begin{align}
         m(x, y)&=\sqrt{g_x^2(x, y) + g_y^2(x, y)}\\
         \theta (x, y)&=\arctan \frac{g_y(x, y)}{g_x(x, y)}
-    \end{align*}
+        \label{equ: compute gradient}
+    \end{align}
     其中，$g_x(x,y)$和$g_y(x,y)$分别表示像素点$(x,y)$处的水平和垂直方向梯度。需要注意的是，在计算梯度方向时，可以将其划分为8个方向（即0度、45度、90度、135度、180度、225度、270度、315度）。
     \item 构建方向直方图：接下来，需要将局部图像块的每个像素的梯度按方向方向分配到8个区间中，统计每个方向区间内的梯度幅值，最后形成一个长度为8的方向直方图。具体来说，对于像素点$(x,y)$，可以根据其梯度方向$\theta(x,y)$将其梯度幅值$m(x,y)$分配到相应的方向区间中。如果$\theta(x,y)$位于第$i$个方向区间内，则该区间的计数器$bin_i$需要增加$m(x,y)$的值。这样，就可以得到一个长度为8的方向直方图：
     \begin{equation*}
